--- a/phoenix_static_buildpack.config
+++ b/phoenix_static_buildpack.config
@@ -1,5 +1,5 @@
 # Clean out cache contents from previous deploys
-clean_cache=true
+clean_cache=false
 
 # We can change the filename for the compile script with this option
 compile="compile"
