--- a/apps/art_store_web/assets/package.json
+++ b/apps/art_store_web/assets/package.json
@@ -18,6 +18,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "terser-webpack-plugin": "^2.3.2",
+    "url-loader": "^3.0.0",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.2"
   }
